--- a/how_to_be_a_researcher.ipynb
+++ b/how_to_be_a_researcher.ipynb
@@ -3799,7 +3799,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('test')"
+   ]
   }
  ],
  "metadata": {
